<resources>
    <string name="app_name" translatable="false">Astraeus</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_glossary">Glossary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_user">User</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="celestial_bodies">Celestial Bodies</string>
    <string name="agencies">Agencies</string>
    <string name="programs">Programs</string>
    <string name="theme_switch">Switch Theme</string>
    <string name="btn_no_account">Don\'t have an account? Register one.</string>
    <string name="user">Username</string>
    <string name="register">Register</string>
    <string name="btn_have_account">Already have an account? Login here.</string>
    <string name="mission_type">Mission Type</string>
    <string name="object_type">Object Type</string>
    <string name="mission_status">Status</string>
</resources>